[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/Tools/Bomb.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/Tools/Bomb.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/Tools/Smoke.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 18.0

[node name="Bomb" type="RigidBody2D"]
z_index = 10
collision_mask = 2147483648
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Bomb" type="Sprite" parent="."]
scale = Vector2( 0.109827, 0.109827 )
texture = ExtResource( 2 )
offset = Vector2( 0, -79.061 )

[node name="ExplosionTimer" type="Timer" parent="."]
one_shot = true

[node name="Smoke" type="Sprite" parent="."]
visible = false
position = Vector2( 0, 72.1963 )
scale = Vector2( 0.21549, 0.259613 )
texture = ExtResource( 3 )
offset = Vector2( 120.655, -751.774 )

[node name="SmokeTime" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="ExplosionTimer" to="." method="_on_ExplosionTimer_timeout"]
[connection signal="timeout" from="SmokeTime" to="." method="_on_SmokeTime_timeout"]
